<resources>
    <string name="app_name">Music Shop</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="plus">+</string>
    <string name="quantity">Quantity</string>
    <string name="price">$</string>
    <string name="order_price">Order Price</string>
    <string name="select_item">Select Item</string>
    <string name="sale_30">Sale - 30%</string>
    <string name="your_name">Your name</string>
</resources>