<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mixer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/aclonica"
            android:textSize="30sp"
            android:rotation="-20"
            android:text="@string/sale_30"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <TextView
        android:text="@string/select_item"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <ImageView
        android:id="@+id/goodsImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/earphones" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/priceTitleTextView"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/order_price"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_below="@+id/priceTitleTextView"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/_0"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/currencyTextView"
            android:layout_below="@+id/priceTitleTextView"
            android:layout_toRightOf="@id/priceTextView"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/price"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/quantityTitleTextView"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/quantity"
            android:layout_toRightOf="@id/priceTitleTextView"
            android:layout_marginStart="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minusButton"
            android:onClick="decreaseQuantity"
            android:layout_alignParentStart="true"
            android:layout_below="@id/quantityTitleTextView"
            android:textColor="@android:color/white"
            android:text="@string/minus"
            android:layout_marginStart="200dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_below="@+id/priceTitleTextView"
            android:layout_toRightOf="@+id/minusButton"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/_0"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plusButton"
            android:onClick="increaseQuantity"
            android:layout_toRightOf="@id/quantityTextView"
            android:layout_below="@id/quantityTitleTextView"
            android:textColor="@android:color/white"
            android:text="@string/plus"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black"
            android:layout_width="50dp"
            android:layout_height="50dp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="addToCart"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/black"
        android:text="@string/add_to_cart"
        android:textColor="@android:color/white" />

</LinearLayout>